이미지 변경

--- a/index.html
+++ b/index.html
@@ -31,53 +31,23 @@
 </head>
 
 <body>
-
-    <!-- Navigation -->
-    <!-- <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
- -->
-
     <div class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-10">
                     <div class="intro-message" style="margin-top: -50px; padding-top: 0px; padding-bottom: 0px;">
                       <img src="bebecam.png" style="width: 70%;"></img>
                         <h1 style="margin-top: -42px;">BebeCam</h1>
                         <h3>베베캠 - 아기와의 추억 앨범</h3><br>
-                           <a href="/" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Download</span></a>
+                           <a href="https://appsto.re/kr/OUzPkb.i" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Download</span></a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-10">
                     <div class="intro-message" style="margin-top: -50px; padding-top: 0px; padding-bottom: 0px;">
                       <img src="bebeview.png" style="width: 70%;"></img>
                         <h1 style="margin-top: -42px;">BebeView</h1>
                         <h3>베베뷰 - 보고싶은 아기 앨범</h3><br>
-                           <a href="/" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Download</span></a>
+                           <a href="https://appsto.re/kr/FXhTkb.i" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Download</span></a>
                     </div>
                 </div>
             </div>
