--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-10">
-                    <div class="intro-message" style="margin-top: -50px; padding-top: 0px; padding-bottom: 0px;">
+                    <div class="intro-message" style="margin-top: -29px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 30px;">
                       <img src="bebecam.png" style="width: 70%;"></img>
-                        <h1 style="margin-top: -42px;">BebeCam</h1>
+                        <h1 style="margin-top: 0px;">BebeCam</h1>
                         <h3>베베캠 - 아기와의 추억 앨범</h3><br>
                            <a href="https://appsto.re/kr/OUzPkb.i" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Download</span></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-sm-10">
-                    <div class="intro-message" style="margin-top: -50px; padding-top: 0px; padding-bottom: 0px;">
+                    <div class="intro-message" style="margin-top: -20px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 30px;">
                       <img src="bebeview.png" style="width: 70%;"></img>
-                        <h1 style="margin-top: -42px;">BebeView</h1>
+                        <h1 style="margin-top: 0px;">BebeView</h1>
                         <h3>베베뷰 - 보고싶은 아기 앨범</h3><br>
                            <a href="https://appsto.re/kr/FXhTkb.i" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Download</span></a>
                     </div>
