--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 <body>
     <div class="intro-header">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-sm-10">
-                    <div class="intro-message" style="margin-top: -29px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 30px;">
+            <div class="row" style="width: 100%">
+                <div class="col-sm-8 col-sm-offset-2 col-lg-6">
+                    <div class="intro-message" style="margin-top: -20px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 30px;">
                       <img src="bebecam.png" style="width: 70%;"></img>
                         <h1 style="margin-top: 0px;">BebeCam</h1>
                         <h3>베베캠 - 아기와의 추억 앨범</h3><br>
                            <a href="https://appsto.re/kr/OUzPkb.i" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Download</span></a>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-10">
+                <div class="col-sm-8 col-sm-offset-2 col-lg-6">
                     <div class="intro-message" style="margin-top: -20px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 30px;">
                       <img src="bebeview.png" style="width: 70%;"></img>
                         <h1 style="margin-top: 0px;">BebeView</h1>
@@ -79,6 +79,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
 
 </body>
 
