--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="intro-header">
         <div class="container">
             <div class="row" style="width: 100%">
-                <div class="col-sm-8 col-sm-offset-2 col-lg-6">
+                <div class="col-md-6 col-md-offset-0 col-sm-8 col-sm-offset-2">
                     <div class="intro-message" style="margin-top: -20px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 30px;">
                       <img src="bebecam.png" style="width: 70%;"></img>
                         <h1 style="margin-top: 0px;">BebeCam</h1>
@@ -42,7 +42,7 @@
                            <a href="https://appsto.re/kr/OUzPkb.i" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Download</span></a>
                     </div>
                 </div>
-                <div class="col-sm-8 col-sm-offset-2 col-lg-6">
+                <div class="col-md-6 col-md-offset-0 col-sm-8 col-sm-offset-2">
                     <div class="intro-message" style="margin-top: -20px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 30px;">
                       <img src="bebeview.png" style="width: 70%;"></img>
                         <h1 style="margin-top: 0px;">BebeView</h1>
