row 양쪽 margin 제거

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <div class="intro-header">
         <div class="container">
-            <div class="row" style="width: 100%">
+            <div class="row" style="width: 100%;margin-right: 0px;margin-left: 0px;">
                 <div class="col-md-6 col-md-offset-0 col-sm-8 col-sm-offset-2">
                     <div class="intro-message" style="margin-top: -20px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 30px;">
                       <img src="bebecam.png" style="width: 70%;"></img>
